# quanttide-laboratory-of-cognitive-engineering

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md
examples/: 2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-13.md  2026-05-17.md  2026-05-18.md  2026-05-20.md  2026-05-25.md
examples/founder-journal/: 2026-05-07.md  2026-05-12.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-19.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md
src/: ai.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  ui.rs
